spacing fixed I think

--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -116,7 +116,8 @@ h3 {
   top: 25%;
   width: 100%;
   text-align: center;
-  letter-spacing: 7.6vw;
+  letter-spacing: 15px;
+  margin: 0 auto;
 }
 
 .gridForm{
